fixing container too big on big screens

--- a/public-ui/src/styles.css
+++ b/public-ui/src/styles.css
@@ -519,7 +519,8 @@ img {
   }
   /* outside container desktop */
   .db-container {
-    margin: 0 calc(10%);
+    margin: 0 auto;
+    max-width: 1332px;
   }
 }
 
